# swagger.yaml
@@ -3,6 +3,21 @@ info:
   title: GIH API
   description: GIH API with autogenerated swagger doc
 
+# components:
+#   securitySchemes:
+# BasicAuth:
+#   type: http
+#   scheme: basic
+# ApiKeyAuth:
+#   type: apiKey
+#   in: header
+#   name: X-API-Key
+# BearerAuth:
+#   type: http
+#   scheme: bearer
+#   description: >-
+#     Enter the token with the `Bearer: ` prefix, e.g. "Bearer abcde12345".
+
 paths:
   /api/login:
     post:
@@ -191,6 +206,22 @@ paths:
             type: string
           required: true
       summary: Forget password token check
+      responses:
+        '200':
+          description: A JSON array
+
+  /api/sap-products-list:
+    get:
+      tags:
+        - List
+      parameters:
+        - in: query
+          name: q
+          schema:
+            type: string
+          example: 'ALBENDAZOLE'
+          allowEmptyValue: true
+      summary: Get list of products.
       responses:
         '200':
           description: A JSON array
